[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scripts/block_generator.gd" type="Script" id=2]
[ext_resource path="res://Assets/New Piskel-1.png.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Block.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Score.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=6]
[ext_resource path="res://Scripts/game_over_screen.gd" type="Script" id=7]
[ext_resource path="res://Scripts/game.gd" type="Script" id=8]
[ext_resource path="res://Assets/T_PurpleBackground_Version1_Layer1.png" type="Texture" id=9]
[ext_resource path="res://Assets/T_PurpleBackground_Version1_Layer4.png" type="Texture" id=10]
[ext_resource path="res://Assets/T_PurpleBackground_Version1_Layer3.png" type="Texture" id=11]
[ext_resource path="res://Assets/T_PurpleBackground_Version1_Layer2.png" type="Texture" id=12]
[ext_resource path="res://dynamicfont.tres" type="DynamicFont" id=13]
[ext_resource path="res://Sounds/Crash Landing.mp3" type="AudioStream" id=14]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 30 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 30, 30 )

[node name="Game" type="Node2D"]
script = ExtResource( 8 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 0, 250 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="Sprite" parent="Player"]
position = Vector2( 30.5, 30 )
scale = Vector2( 2.21875, 2.3125 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 30, 30 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="Player"]
offset = Vector2( 250, 0 )
current = true
limit_top = 0
limit_bottom = 0

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2( 30, 30 )
shape = SubResource( 4 )

[node name="SpeedTimer" type="Timer" parent="Player"]
autostart = true

[node name="BlockGenerator" parent="." instance=ExtResource( 4 )]
position = Vector2( -618, 41 )
script = ExtResource( 2 )
player_path = NodePath("../Player")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreContainer" type="Control" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 100.0
margin_top = 10.0
margin_right = 100.0
margin_bottom = 60.0
mouse_filter = 2

[node name="ScoreLabel" parent="UI/ScoreContainer" instance=ExtResource( 5 )]
anchor_bottom = 0.0
margin_left = -178.0
margin_top = 120.0
margin_right = -30.0
margin_bottom = 134.0
script = ExtResource( 6 )

[node name="GameOverScreen" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.498039 )
script = ExtResource( 7 )

[node name="GameOverLabel" type="Label" parent="UI/GameOverScreen"]
margin_left = 258.0
margin_top = 78.0
margin_right = 703.0
margin_bottom = 186.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 13 )
text = "Game Over"
align = 1
valign = 1

[node name="FinalScoreLabel" type="Label" parent="UI/GameOverScreen"]
margin_left = 374.0
margin_top = 167.0
margin_right = 587.0
margin_bottom = 241.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 13 )

[node name="RetryButton" type="Button" parent="UI/GameOverScreen"]
pause_mode = 2
margin_left = 385.0
margin_top = 269.0
margin_right = 660.0
margin_bottom = 335.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 13 )
action_mode = 0
text = "Try Again"

[node name="MainMenuButton" type="Button" parent="UI/GameOverScreen"]
pause_mode = 2
margin_left = 385.0
margin_top = 325.0
margin_right = 660.0
margin_bottom = 391.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 13 )
action_mode = 0
text = "Main Menu"

[node name="QuitButtonGOScreen" type="Button" parent="UI/GameOverScreen"]
pause_mode = 2
margin_left = 385.0
margin_top = 380.0
margin_right = 660.0
margin_bottom = 446.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = ExtResource( 13 )
action_mode = 0
text = "QUIT"

[node name="Background" type="ParallaxBackground" parent="."]
scroll_offset = Vector2( 1, 0 )

[node name="Layer1" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.5, 0 )
motion_mirroring = Vector2( 4096, 2048 )

[node name="Image1" type="Sprite" parent="Background/Layer1"]
texture = ExtResource( 9 )

[node name="Layer2" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.7, 0 )
motion_mirroring = Vector2( 4096, 2048 )

[node name="Image2" type="Sprite" parent="Background/Layer2"]
texture = ExtResource( 12 )

[node name="Layer3" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 1, 0 )
motion_mirroring = Vector2( 4096, 2048 )

[node name="Image3" type="Sprite" parent="Background/Layer3"]
texture = ExtResource( 11 )

[node name="Layer4" type="ParallaxLayer" parent="Background"]
motion_scale = Vector2( 0.3, 0 )
motion_mirroring = Vector2( 4096, 2048 )

[node name="Image4" type="Sprite" parent="Background/Layer4"]
texture = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = 2.0
autoplay = true
